--- a/notebooks/scrap_youtube_html.ipynb
+++ b/notebooks/scrap_youtube_html.ipynb
@@ -9,14 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
     "\n",
-    "path = Path(\"/home/tselano/dev/ai-xp/resources/examples/example_youtube_html.html\")"
+    "path = Path(\"/home/tselano/dev/ai-xp/resources/examples/example_youtube_html_2.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ai_xp.scrapper import YouTubeHtmlScrapper\n",
+    "\n",
+    "\n",
+    "scrapper = YouTubeHtmlScrapper.from_path(path)\n",
+    "print(scrapper.title())\n",
+    "print()\n",
+    "print(scrapper.short_description())"
    ]
   }
  ],
