Improve scrapper: scrap description with JSON mode and try system for regex

--- a/notebooks/scrap_youtube_html.ipynb
+++ b/notebooks/scrap_youtube_html.ipynb
@@ -14,9 +14,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "path = Path(\"/home/tselano/dev/ai-xp/resources/examples/example_youtube_html_2.html\")"
+    "from ai_xp.scrapper import YouTubeHtmlScrapper\n",
+    "\n"
    ]
   },
   {
@@ -25,13 +24,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ai_xp.scrapper import YouTubeHtmlScrapper\n",
-    "\n",
+    "path = Path(\"/home/tselano/dev/ai-xp/resources/examples/example_youtube_html_2.html\")\n",
     "\n",
     "scrapper = YouTubeHtmlScrapper.from_path(path)\n",
     "print(scrapper.title())\n",
     "print()\n",
-    "print(scrapper.short_description())"
+    "print(scrapper.short_description(mode=\"regex\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.youtube.com/watch?v=l1VSCbOQRBw\"\n",
+    "\n",
+    "scrapper = YouTubeHtmlScrapper.from_url(url)\n",
+    "print(scrapper.title())\n",
+    "print()\n",
+    "print(scrapper.short_description(mode=\"regex\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(scrapper.short_description(mode=\"json\"))"
    ]
   }
  ],
