--- a/notebooks/parse_youtube_history.ipynb
+++ b/notebooks/parse_youtube_history.ipynb
@@ -101,10 +101,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Extract Titles when possible"
+    "df.loc[df.href == \"https://www.youtube.com/watch?v=HeK6Mu_nrO0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df.href == \"https://www.youtube.com/watch?v=QJSnf04K9WI\"]\n"
    ]
   }
  ],
