Rework database to include metadata and transcripts.

--- a/notebooks/scrap_youtube_html.ipynb
+++ b/notebooks/scrap_youtube_html.ipynb
@@ -54,6 +54,24 @@
    "source": [
     "print(scrapper.short_description(mode=\"json\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapper.to_dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrapper.to_json()"
+   ]
   }
  ],
  "metadata": {
