--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -27,7 +27,7 @@
     "from ai_xp.database import FileDatabase\n",
     "\n",
     "inputs_lookup_dir_path = Path(\"../inputs\").resolve()\n",
-    "outputs_lookup_dir_path = Path(\"../generated/llm_output\").resolve()\n",
+    "outputs_lookup_dir_path = Path(\"../generated\").resolve()\n",
     "\n",
     "db = FileDatabase.from_paths(inputs_lookup_dir_path, outputs_lookup_dir_path)\n",
     "db"
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.search(db.inputs_dataframe, \"CoMmeNt\")"
+    "db.search(db.input_dataframe, \"CoMmeNt\")"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.search(db.inputs_dataframe, \"monstre unicellulaire\")\n"
+    "db.search(db.input_dataframe, \"monstre unicellulaire\")\n"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.search(db.outputs_dataframe, \"CoMmeNt\")"
+    "db.search(db.llm_output_dataframe, \"CoMmeNt\")"
    ]
   },
   {
@@ -101,7 +101,145 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.inputs_dataframe"
+    "db.input_dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize All Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize All Transcripts (Listing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Inputs with missing Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.inputs_with_missing_metadata()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Inputs with missing Transcripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(db.inputs_with_missing_transcripts())\n",
+    "indexer = [\"en\",]\n",
+    "display(db.inputs_with_missing_transcripts(indexer))\n",
+    "indexer = [\"en\", \"manually_created\"]\n",
+    "display(db.inputs_with_missing_transcripts(indexer))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "from ai_xp.scrapper import MetadataPath, YouTubeHtmlScrapper\n",
+    "\n",
+    "\n",
+    "sleep_seconds = 2\n",
+    "db = db.refresh() # XXX extremely inefficient, but ensure freshest view on the filesystem\n",
+    "db.metadata_lookup_dir_path.mkdir(exist_ok=True, parents=True)\n",
+    "missing_metadata = db.inputs_with_missing_metadata()\n",
+    "\n",
+    "print(\"Start transcripts \")\n",
+    "print(f\"There is {len(db.input_dataframe)} inputs. \")\n",
+    "print(f\"There is {len(missing_metadata)} missing metadata files. \")\n",
+    "for idx, video_id in enumerate(missing_metadata.index, 1):\n",
+    "    print(f\"{idx}/{len(missing_metadata)}: {video_id}\")\n",
+    "    scrapper = YouTubeHtmlScrapper.from_video_id(video_id)\n",
+    "    if scrapper is None:\n",
+    "        print(f\"ERROR Failed to fetch metadata for {video_id}\")\n",
+    "    else:\n",
+    "        output_filename = MetadataPath.from_scrapper(scrapper, \"json\").to_filename()\n",
+    "        output_path = db.metadata_lookup_dir_path / output_filename\n",
+    "        output_path.write_text(scrapper.to_json())\n",
+    "        print(f\"OK Written {video_id} metadata to {output_path}\")\n",
+    "    print(f\"Sleep for {sleep_seconds} seconds...\")\n",
+    "    sleep(sleep_seconds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Inputs with missing Titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.input_dataframe[db.input_dataframe.title == \"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"].loc[(\n",
+    "    db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"].index.difference(\n",
+    "        db.input_dataframe[db.input_dataframe.title == \"\"].index\n",
+    "    )\n",
+    ")]"
    ]
   },
   {
@@ -117,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.outputs_dataframe"
+    "db.llm_output_dataframe"
    ]
   },
   {
