db.fetch_metadata : fetch all metadata (long running op)

--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -124,6 +124,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Visualize Successful Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.query(\"status == 'success'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Unsuccessful Metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.query(\"status != 'success'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visualize All Transcripts (Listing)"
    ]
   },
@@ -178,30 +210,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "from ai_xp.scrapper import MetadataPath, YouTubeHtmlScrapper\n",
-    "\n",
-    "\n",
-    "sleep_seconds = 2\n",
-    "db = db.refresh() # XXX extremely inefficient, but ensure freshest view on the filesystem\n",
-    "db.metadata_lookup_dir_path.mkdir(exist_ok=True, parents=True)\n",
-    "missing_metadata = db.inputs_with_missing_metadata()\n",
-    "\n",
-    "print(\"Start transcripts \")\n",
-    "print(f\"There is {len(db.input_dataframe)} inputs. \")\n",
-    "print(f\"There is {len(missing_metadata)} missing metadata files. \")\n",
-    "for idx, video_id in enumerate(missing_metadata.index, 1):\n",
-    "    print(f\"{idx}/{len(missing_metadata)}: {video_id}\")\n",
-    "    scrapper = YouTubeHtmlScrapper.from_video_id(video_id)\n",
-    "    if scrapper is None:\n",
-    "        print(f\"ERROR Failed to fetch metadata for {video_id}\")\n",
-    "    else:\n",
-    "        output_filename = MetadataPath.from_scrapper(scrapper, \"json\").to_filename()\n",
-    "        output_path = db.metadata_lookup_dir_path / output_filename\n",
-    "        output_path.write_text(scrapper.to_json())\n",
-    "        print(f\"OK Written {video_id} metadata to {output_path}\")\n",
-    "    print(f\"Sleep for {sleep_seconds} seconds...\")\n",
-    "    sleep(sleep_seconds)"
+    "# TODO eschalk Candidate for pipeline input -> transcript\n",
+    "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
+    "db = db.refresh()\n",
+    "db.fetch_metadata()\n"
    ]
   },
   {
