Rework fetch transcript logic. TODO :Remove entrypoint logic entirely and use database

--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -198,10 +198,36 @@
    "outputs": [],
    "source": [
     "display(db.inputs_with_missing_transcripts())\n",
-    "indexer = [\"en\",]\n",
-    "display(db.inputs_with_missing_transcripts(indexer))\n",
-    "indexer = [\"en\", \"manually_created\"]\n",
-    "display(db.inputs_with_missing_transcripts(indexer))\n"
+    "# indexer = [\"en\",]\n",
+    "# display(db.inputs_with_missing_transcripts(indexer))\n",
+    "# indexer = [\"en\", \"manually_created\"]\n",
+    "# display(db.inputs_with_missing_transcripts(indexer))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WRITE: Fetch Transcripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO eschalk Candidate for pipeline input -> transcript\n",
+    "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
+    "db = db.refresh()\n",
+    "db.fetch_transcripts()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WRITE: Fetch Metadata"
    ]
   },
   {
