Improve notebook visu database

--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -172,6 +172,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Visualize Successful Transcripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe.query(\"status == 'success'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Unsuccessful Transcripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe.query(\"status != 'success'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retry strategy: For NoTranscriptFound, try to query first available transcripts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe.query(\"status in ('NoTranscriptFound')\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query uncommon errors:\n",
+    "\n",
+    "(likely `VideoUnavailable` meaning the URL is malformed, or the video was deleted.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe.query(\n",
+    "    \"(status not in ('success', 'NoTranscriptFound', 'TranscriptsDisabled', 'RequestBlocked'))\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visualize Inputs with missing Metadata"
    ]
   },
@@ -219,8 +287,11 @@
    "source": [
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
-    "db = db.refresh()\n",
-    "db.fetch_transcripts()\n"
+    "# TO be integrated in a pipeline (outside of notebook)\n",
+    "DO_FETCH_TRANSCRIPTS = False \n",
+    "if DO_FETCH_TRANSCRIPTS:\n",
+    "    db = db.refresh()\n",
+    "    db.fetch_transcripts()\n"
    ]
   },
   {
@@ -238,8 +309,11 @@
    "source": [
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
-    "db = db.refresh()\n",
-    "db.fetch_metadata()\n"
+    "# TO be integrated in a pipeline (outside of notebook)\n",
+    "DO_FETCH_METADATA = False\n",
+    "if DO_FETCH_METADATA:\n",
+    "    db = db.refresh()\n",
+    "    db.fetch_metadata()\n"
    ]
   },
   {
@@ -259,12 +333,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Inputs with \"untitled\" Title Slugs\n",
+    "\n",
+    "Reasons: missing title OR unslugifiable titles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"]"
+    "db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Inputs with unslugifiable Titles\n"
    ]
   },
   {
