Work on find llm outputs

--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -266,54 +266,10 @@
    "outputs": [],
    "source": [
     "display(db.inputs_with_missing_transcripts())\n",
-    "# indexer = [\"en\",]\n",
-    "# display(db.inputs_with_missing_transcripts(indexer))\n",
-    "# indexer = [\"en\", \"manually_created\"]\n",
-    "# display(db.inputs_with_missing_transcripts(indexer))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### WRITE: Fetch Transcripts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO eschalk Candidate for pipeline input -> transcript\n",
-    "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
-    "# TO be integrated in a pipeline (outside of notebook)\n",
-    "DO_FETCH_TRANSCRIPTS = False \n",
-    "if DO_FETCH_TRANSCRIPTS:\n",
-    "    db = db.refresh()\n",
-    "    db.fetch_transcripts()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### WRITE: Fetch Metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO eschalk Candidate for pipeline input -> transcript\n",
-    "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
-    "# TO be integrated in a pipeline (outside of notebook)\n",
-    "DO_FETCH_METADATA = False\n",
-    "if DO_FETCH_METADATA:\n",
-    "    db = db.refresh()\n",
-    "    db.fetch_metadata()\n"
+    "indexer = [\"en\",]\n",
+    "display(db.inputs_with_missing_transcripts(indexer))\n",
+    "indexer = [\"en\", \"manually_created\"]\n",
+    "display(db.inputs_with_missing_transcripts(indexer))\n"
    ]
   },
   {
@@ -347,7 +303,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"]\n"
+    "from ai_xp.utils import render_title_slug\n",
+    "\n",
+    "\n",
+    "title_slug_series = db.input_dataframe['title'].apply(render_title_slug)\n",
+    "title_slug_series\n",
+    "db.input_dataframe[title_slug_series == \"untitled\"]\n"
    ]
   },
   {
@@ -363,18 +324,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"].loc[(\n",
-    "    db.input_dataframe[db.input_dataframe.title_slug == \"untitled\"].index.difference(\n",
-    "        db.input_dataframe[db.input_dataframe.title == \"\"].index\n",
+    "db.input_dataframe[title_slug_series == \"untitled\"].loc[\n",
+    "    (\n",
+    "        db.input_dataframe[title_slug_series == \"untitled\"].index.difference(\n",
+    "            db.input_dataframe[db.input_dataframe.title == \"\"].index\n",
+    "        )\n",
     "    )\n",
-    ")]"
+    "]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize All Outputs"
+    "### Visualize All LLM Outputs"
    ]
   },
   {
@@ -390,7 +353,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Successful Outputs"
+    "### Visualize Inputs with missing LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inputs with missing LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = db.input_dataframe.drop(db.llm_output_dataframe.index)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexers = [\n",
+    "    (\"en\", \"generated\"),\n",
+    "    (\"en\", \"manually_created\"),\n",
+    "    (\"fr\", \"generated\"),\n",
+    "    (\"fr\", \"manually_created\"),\n",
+    "]\n",
+    "\n",
+    "dfs = db.find_missing_llm_outputs_candidates(indexers, keep_successful_only=True)\n",
+    "\n",
+    "for key in dfs:\n",
+    "    print(key)\n",
+    "    display(dfs[key])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Successful LLM Outputs"
    ]
   },
   {
@@ -406,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Errored Outputs"
+    "### Visualize Errored LLM Outputs"
    ]
   },
   {
@@ -423,6 +439,8 @@
    "metadata": {},
    "source": [
     "### Visualize Inputs With Missing Outputs\n",
+    "\n",
+    "XXX Outdated\n",
     "\n",
     "Purely missing output files are missing outputs.\n",
     "\n",
