Work on Summary generation

--- a/notebooks/dl_yt_2.ipynb
+++ b/notebooks/dl_yt_2.ipynb
@@ -19,6 +19,8 @@
     "import re\n",
     "from IPython.display import Markdown\n",
     "\n",
+    "from ai_xp.utils import load_json\n",
+    "\n",
     "def get_youtube_transcript(video_url: str, languages: tuple[str, ...] | str):\n",
     "    # ISO 639-1 language code\n",
     "    languages = (languages,) if isinstance(languages, str) else languages\n",
@@ -72,7 +74,7 @@
     "    *, secrets_path: Path = Path.home() / Path(\".secrets/secrets.json\")\n",
     "):\n",
     "    if secrets_path.is_file():\n",
-    "        return json.loads(secrets_path.read_text())[\"openrouter.ai\"][\"api-key\"]\n",
+    "        return load_json(secrets_path)[\"openrouter.ai\"][\"api-key\"]\n",
     "    else:\n",
     "        raise FileNotFoundError(f\"No secrets found for {secrets_path = !s}\")\n",
     "\n",
