--- a/notebooks/fetcher.ipynb
+++ b/notebooks/fetcher.ipynb
@@ -76,7 +76,7 @@
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
     "# TO be integrated in a pipeline (outside of notebook)\n",
-    "DO_FETCH_METADATA = False\n",
+    "DO_FETCH_METADATA = True\n",
     "if DO_FETCH_METADATA:\n",
     "    db = db.refresh()\n",
     "    db.fetch_missing_metadata()\n"
