--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -389,8 +389,74 @@
     "dfs = db.find_missing_llm_outputs_candidates(indexers, keep_successful_only=True)\n",
     "\n",
     "for key in dfs:\n",
-    "    print(key)\n",
+    "    language_code, source = key\n",
+    "    print(language_code, source)\n",
     "    display(dfs[key])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.llm_output_lookup_dir_path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "from ai_xp.llm_proxy import AiSummarizer, OpenRouterAiProxy, VideoModel\n",
+    "from ai_xp.scrapper import MetadataPath\n",
+    "from ai_xp.transcript import TranscriptPath\n",
+    "from ai_xp.utils import load_json, retrieve_api_key\n",
+    "\n",
+    "api_key = retrieve_api_key()\n",
+    "proxy = OpenRouterAiProxy(api_key=api_key)\n",
+    "\n",
+    "language_code = \"fr\"\n",
+    "df = dfs[language_code, \"manually_created\"]\n",
+    "for idx, video_id in enumerate(df.index[1:2], 1):\n",
+    "    row = df.loc[video_id]\n",
+    "    print(f\"{idx:05d}/{len(df):05d}\", video_id, row[\"title\"])\n",
+    "    print(row[\"metadata_path\"])\n",
+    "    print(row[\"transcript_path\"])\n",
+    "    print(MetadataPath.from_path(row[\"metadata_path\"]))\n",
+    "    print(TranscriptPath.from_path(row[\"transcript_path\"]))\n",
+    "    metadata_json = load_json(Path(row[\"metadata_path\"]))\n",
+    "    transcript_file_path = Path(row[\"transcript_path\"])\n",
+    "    transcript_json = load_json(Path(row[\"transcript_path\"]))\n",
+    "    print(metadata_json)\n",
+    "    print(transcript_json)\n",
+    "    print()\n",
+    "    video = VideoModel(video_id=video_id, title=metadata_json[\"title\"], description=metadata_json[\"description\"])\n",
+    "    print(video)\n",
+    "\n",
+    "    summarizer = AiSummarizer.instantiate(proxy, prompts_path=Path(\"../resources/prompts/prompts.toml\"))\n",
+    "    print(summarizer)\n",
+    "    summarizer.summarize_with_ai(\n",
+    "        video,\n",
+    "        transcript_file_path,\n",
+    "        db.llm_output_lookup_dir_path,\n",
+    "        language_code,\n",
+    "        None\n",
+    "    )\n",
+    "    # XXX eschalk this output into the transcript dir, not LLM output dir\n",
+    "    # print(row)"
    ]
   },
   {
