Finish proto summarizer

--- a/notebooks/parse_youtube_history.ipynb
+++ b/notebooks/parse_youtube_history.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df.duplicated(subset=\"id\", keep=False)][\"titleUrl\"].to_list()"
+    "df[df.duplicated(subset=\"video_id\", keep=False)][\"titleUrl\"].to_list()"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# analyzer = YouTubeHistoryAnalyzer.from_path(path, consolidate=True)\n",
-    "df[[\"title\", \"href\", \"title_slug\", \"id\"]].drop_duplicates(\"id\").set_index(\"id\")"
+    "df[[\"title\", \"href\", \"video_id\"]].drop_duplicates(\"video_id\").set_index(\"video_id\")"
    ]
   },
   {
