--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Search Outputs"
+    "### Search LLM Outputs"
    ]
   },
   {
@@ -420,11 +420,16 @@
    "source": [
     "import json\n",
     "\n",
+    "import pandas as pd\n",
+    "\n",
     "from ai_xp.llm_proxy import AiSummarizer, OpenRouterAiProxy, VideoModel\n",
     "from ai_xp.scrapper import MetadataPath\n",
     "from ai_xp.transcript import TranscriptPath\n",
-    "from ai_xp.utils import load_json, retrieve_api_key\n",
+    "from ai_xp.utils import load_json, render_timestamp_slug, retrieve_api_key\n",
     "\n",
+    "now = pd.Timestamp.now()\n",
+    "# time_id = render_timestamp_slug(now)\n",
+    "    \n",
     "api_key = retrieve_api_key()\n",
     "proxy = OpenRouterAiProxy(api_key=api_key)\n",
     "\n",
@@ -443,17 +448,22 @@
     "    print(metadata_json)\n",
     "    print(transcript_json)\n",
     "    print()\n",
-    "    video = VideoModel(video_id=video_id, title=metadata_json[\"title\"], description=metadata_json[\"description\"])\n",
+    "    video = VideoModel(\n",
+    "        video_id=video_id,\n",
+    "        title=metadata_json[\"title\"],\n",
+    "        description=metadata_json[\"description\"],\n",
+    "    )\n",
     "    print(video)\n",
     "\n",
-    "    summarizer = AiSummarizer.instantiate(proxy, prompts_path=Path(\"../resources/prompts/prompts.toml\"))\n",
+    "    summarizer = AiSummarizer.instantiate(\n",
+    "        proxy,\n",
+    "        dry_run=False,\n",
+    "        prompts_path=Path(\"../resources/prompts/prompts.toml\"),\n",
+    "        creation_time=now,\n",
+    "    )\n",
     "    print(summarizer)\n",
     "    summarizer.summarize_with_ai(\n",
-    "        video,\n",
-    "        transcript_file_path,\n",
-    "        db.llm_output_lookup_dir_path,\n",
-    "        language_code,\n",
-    "        None\n",
+    "        video, transcript_file_path, db.llm_output_lookup_dir_path, language_code, None\n",
     "    )\n",
     "    # XXX eschalk this output into the transcript dir, not LLM output dir\n",
     "    # print(row)"
