Work on LLM output fetcher

--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -369,8 +369,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = db.input_dataframe.drop(db.llm_output_dataframe.index)\n",
+    "df = db.input_dataframe.drop(db.llm_output_dataframe.index.get_level_values(\"video_id\"))\n",
     "df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get indexers: couples of language code and transcript source"
    ]
   },
   {
@@ -379,15 +386,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indexers = [\n",
-    "    (\"en\", \"generated\"),\n",
-    "    (\"en\", \"manually_created\"),\n",
-    "    (\"fr\", \"generated\"),\n",
-    "    (\"fr\", \"manually_created\"),\n",
-    "]\n",
-    "\n",
+    "db.get_transcript_language_and_source_indexer_couples()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Display all missing LLM output candidates for indexer couples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexers = db.get_transcript_language_and_source_indexer_couples()\n",
     "dfs = db.find_missing_llm_outputs_candidates(indexers, keep_successful_only=True)\n",
-    "\n",
     "for key in dfs:\n",
     "    language_code, source = key\n",
     "    print(language_code, source)\n",
@@ -418,55 +434,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
     "from ai_xp.llm_proxy import AiSummarizer, OpenRouterAiProxy, VideoModel\n",
-    "from ai_xp.scrapper import MetadataPath\n",
-    "from ai_xp.transcript import TranscriptPath\n",
-    "from ai_xp.utils import load_json, render_timestamp_slug, retrieve_api_key\n",
+    "from ai_xp.utils import retrieve_api_key\n",
     "\n",
     "now = pd.Timestamp.now()\n",
-    "# time_id = render_timestamp_slug(now)\n",
-    "    \n",
+    "\n",
     "api_key = retrieve_api_key()\n",
     "proxy = OpenRouterAiProxy(api_key=api_key)\n",
+    "summarizer = AiSummarizer.instantiate(\n",
+    "    proxy,\n",
+    "    dry_run=False,\n",
+    "    prompts_path=Path(\"../resources/prompts/prompts.toml\"),\n",
+    "    creation_time=now,\n",
+    ")\n",
+    "print(summarizer)\n",
     "\n",
-    "language_code = \"fr\"\n",
-    "df = dfs[language_code, \"manually_created\"]\n",
-    "for idx, video_id in enumerate(df.index[1:2], 1):\n",
-    "    row = df.loc[video_id]\n",
-    "    print(f\"{idx:05d}/{len(df):05d}\", video_id, row[\"title\"])\n",
-    "    print(row[\"metadata_path\"])\n",
-    "    print(row[\"transcript_path\"])\n",
-    "    print(MetadataPath.from_path(row[\"metadata_path\"]))\n",
-    "    print(TranscriptPath.from_path(row[\"transcript_path\"]))\n",
-    "    metadata_json = load_json(Path(row[\"metadata_path\"]))\n",
-    "    transcript_file_path = Path(row[\"transcript_path\"])\n",
-    "    transcript_json = load_json(Path(row[\"transcript_path\"]))\n",
-    "    print(metadata_json)\n",
-    "    print(transcript_json)\n",
-    "    print()\n",
-    "    video = VideoModel(\n",
-    "        video_id=video_id,\n",
-    "        title=metadata_json[\"title\"],\n",
-    "        description=metadata_json[\"description\"],\n",
-    "    )\n",
-    "    print(video)\n",
-    "\n",
-    "    summarizer = AiSummarizer.instantiate(\n",
-    "        proxy,\n",
-    "        dry_run=False,\n",
-    "        prompts_path=Path(\"../resources/prompts/prompts.toml\"),\n",
-    "        creation_time=now,\n",
-    "    )\n",
-    "    print(summarizer)\n",
-    "    summarizer.summarize_with_ai(\n",
-    "        video, transcript_file_path, db.llm_output_lookup_dir_path, language_code, None\n",
-    "    )\n",
-    "    # XXX eschalk this output into the transcript dir, not LLM output dir\n",
-    "    # print(row)"
+    "indexers = db.get_transcript_language_and_source_indexer_couples()\n",
+    "dfs = db.find_missing_llm_outputs_candidates(indexers, keep_successful_only=True)\n",
+    "for key in dfs:\n",
+    "    language_code, source = key\n",
+    "    print(language_code, source)\n",
+    "    df = dfs[key]\n",
+    "    display(df)\n",
+    "    \n",
+    "    for idx, video_id in enumerate(df.index, 1):\n",
+    "        row = df.loc[video_id]\n",
+    "        print(f\"{idx:05d}/{len(df):05d}\", video_id, row[\"title\"])\n",
+    "        metadata_path = Path(row[\"metadata_path\"])\n",
+    "        transcript_path = Path(row[\"transcript_path\"])\n",
+    "        print(f\"{metadata_path=}\")\n",
+    "        print(f\"{transcript_path=}\")\n",
+    "        video = VideoModel.from_path(metadata_path)\n",
+    "        print(video)\n",
+    "        summarizer.summarize_with_ai(\n",
+    "            video, transcript_path, db.llm_output_lookup_dir_path, language_code, None\n",
+    "        )\n"
    ]
   },
   {
