Adding metadata to LLM output files (warning, contains sensitive info)

--- a/notebooks/fetcher_2.ipynb
+++ b/notebooks/fetcher_2.ipynb
@@ -54,7 +54,7 @@
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
     "# TO be integrated in a pipeline (outside of notebook)\n",
-    "DO_FETCH_TRANSCRIPTS = True\n",
+    "DO_FETCH_TRANSCRIPTS = False\n",
     "if DO_FETCH_TRANSCRIPTS:\n",
     "    db = db.refresh()\n",
     "    db.fetch_missing_transcripts()\n"
@@ -76,7 +76,7 @@
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
     "# TO be integrated in a pipeline (outside of notebook)\n",
-    "DO_FETCH_METADATA = True\n",
+    "DO_FETCH_METADATA = False\n",
     "if DO_FETCH_METADATA:\n",
     "    db = db.refresh()\n",
     "    db.fetch_missing_metadata()\n"
