--- a/notebooks/fetcher_2.ipynb
+++ b/notebooks/fetcher_2.ipynb
@@ -95,6 +95,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ai_xp.llm_proxy import OpenRouterAiProxy\n",
+    "\n",
+    "\n",
+    "proxy = OpenRouterAiProxy.instantiate_with_default_key()\n",
+    "resp = proxy.check_if_i_can_still_use_the_service()\n",
+    "print(resp)\n",
+    "print(resp[''])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db.fetch_missing_llm_outputs()\n"
    ]
   }
