Write md and json

--- a/notebooks/fetcher_2.ipynb
+++ b/notebooks/fetcher_2.ipynb
@@ -100,8 +100,7 @@
     "\n",
     "proxy = OpenRouterAiProxy.instantiate_with_default_key()\n",
     "resp = proxy.check_if_i_can_still_use_the_service()\n",
-    "print(resp)\n",
-    "print(resp[''])"
+    "print(resp)"
    ]
   },
   {
