Refactor metadata and transcript fetching into standalone functions

--- a/notebooks/fetcher_1.ipynb
+++ b/notebooks/fetcher_1.ipynb
@@ -52,6 +52,7 @@
    "outputs": [],
    "source": [
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
+    "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
     "# TO be integrated in a pipeline (outside of notebook)\n",
     "DO_FETCH_TRANSCRIPTS = True\n",
