--- a/notebooks/fetcher_2.ipynb
+++ b/notebooks/fetcher_2.ipynb
@@ -76,7 +76,7 @@
     "# TODO eschalk Candidate for pipeline input -> transcript\n",
     "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
     "# TO be integrated in a pipeline (outside of notebook)\n",
-    "DO_FETCH_METADATA = False\n",
+    "DO_FETCH_METADATA = True\n",
     "if DO_FETCH_METADATA:\n",
     "    db = db.refresh()\n",
     "    db.fetch_missing_metadata()\n"
@@ -110,6 +110,22 @@
    "outputs": [],
    "source": [
     "db.fetch_missing_llm_outputs()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO eschalk Candidate for pipeline input -> transcript\n",
+    "# TODO eschalk Candidate for pipeline input -> transcript\n",
+    "# XXX extremely inefficient, but ensure freshest view on the filesystem\n",
+    "# TO be integrated in a pipeline (outside of notebook)\n",
+    "DO_FETCH_TRANSCRIPTS = True\n",
+    "if DO_FETCH_TRANSCRIPTS:\n",
+    "    db = db.refresh()\n",
+    "    db.fetch_missing_transcripts()\n"
    ]
   }
  ],
