--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -153,6 +153,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.query(\"status == 'likely-an-advertisement'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.query(\"status == 'likely-video-unavailable'\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,7 +222,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retry strategy: For NoTranscriptFound, try to query first available transcripts."
+    "Retry strategy: For NoTranscriptFound, try to query first available transcripts.\n",
+    "\n",
+    "Note: This error may not happen anymore when the automatic translation of transcripts is used."
    ]
   },
   {
@@ -213,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.transcript_dataframe.query(\"status in ('NoTranscriptFound')\")\n"
+    "db.transcript_dataframe.query(\"status in ('NoTranscriptFound',)\")\n"
    ]
   },
   {
@@ -234,6 +254,45 @@
     "db.transcript_dataframe.query(\n",
     "    \"(status not in ('success', 'NoTranscriptFound', 'TranscriptsDisabled', 'RequestBlocked'))\"\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See all unique distinct errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe[\"status\"].unique()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See all \"YouTubeResponseIsEmpty\" errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ai_xp.utils import render_video_url\n",
+    "from IPython.display import Markdown\n",
+    "\n",
+    "\n",
+    "_df = db.transcript_dataframe.query(\"status in ('YouTubeResponseIsEmpty')\").reset_index()\n",
+    "_df[\"video_url\"] = _df[\"video_id\"].apply(render_video_url)\n",
+    "display(_df[[\"title_slug\", \"video_url\"]].to_dict(orient=\"index\"))\n",
+    "display(Markdown(_df[[\"title_slug\", \"video_url\"]].to_markdown()))"
    ]
   },
   {
